# undergraduate-thesis

./: .gitignore  README.md
ambig-swe-useful-info/: Design.md  Design.zh.md  Result.md  Result.zh.md  ambig_swe_10_clean.jsonl  ambig_swe_10_clean_with_useful_info.jsonl  ambig_swe_10_raw.jsonl  pyproject.toml  run_experiment.ps1
ambig-swe-useful-info/results/: bed_flash.jsonl  bed_pro.jsonl  bed_pro_monitor.json  direct_flash.jsonl  direct_pro.jsonl  direct_pro_monitor.json  per_task_flash.jsonl  per_task_pro.jsonl  report_flash.txt  report_pro.txt
ambig-swe-useful-info/src/ambig_swe_useful_info/: cli.py  config.py  schemas.py
ambig-swe-useful-info/src/ambig_swe_useful_info/bed/: planner.py  prompts.py  utils.py
ambig-swe-useful-info/src/ambig_swe_useful_info/data/: loader.py
ambig-swe-useful-info/src/ambig_swe_useful_info/direct/: prompts.py  (+1 more)
ambig-swe-useful-info/tests/: conftest.py  test_cli_output.py  test_eval.py  test_json_mode.py  test_loader.py  test_planner_smoke.py  test_proxy.py
clareval/: Design.md  Design.zh.md  Result.md  Result.zh.md  clareval_multi_turn_30_clean.jsonl  clareval_multi_turn_30_raw.jsonl  pyproject.toml
clareval/results/: bed_flash_progress.json  bed_flash_report.txt  bed_flash_results.jsonl  bed_pro_progress.json  bed_pro_report.txt  bed_pro_results.jsonl  direct_flash_progress.json  direct_flash_report.txt  direct_flash_results.jsonl  direct_pro_progress.json  direct_pro_report.txt  direct_pro_results.jsonl
clareval/src/clareval_experiment/: __init__.py  cli.py  config.py  schemas.py
clareval/tests/: test_pipeline.py
(+42 files in other folders)
