[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clareval-experiment"
version = "0.1.0"
description = "Compare Direct and BED on ClarEval multi-turn tasks."
readme = "Design.md"
requires-python = ">=3.9"
dependencies = [
  "openai>=1.30.0",
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
clareval-experiment-run = "clareval_experiment.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
